--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body{
-    margin:0;
+    
     font-family: 'Poppins', sans-serif;
-    padding:10px;
+    
 
     
 }
 h1{
-    font-size:30px;
+    font-size:40px;
     color:#3232d3
     
 }
@@ -14,39 +14,45 @@ h3{
     font-size:30px;
 }
 
-.highlight{
-    color:#FF8367;
-}
 
 
 
 
 .highlight{
-    color:orange;
-    padding-bottom: 20px;
+    color:salmon;
+    font-size: 50px;
+    
 }
 .div-width{
-    
+    line-height: normal;
     width: 20%;
     float:left;
     margin-left: 5%;
-    padding-left:2%;
+    padding-left:3%;
+    
 }
 .div-width img{
     width:100%;
     
 } 
 section{
+
     height: 300px;
     padding-bottom: 150px;
+}
+.line-height{
+    line-height: 20px;
+
 }
 .add-button{
     text-decoration: none;
     background-image: linear-gradient(45deg,lightSalmon,tomato);
-    padding:10px 20px;
+    padding:10px 40px;
     border-radius: 5px;
     color:white;
     font-weight: 700;
+    margin-top: 40px;
+    
 }
 
 
@@ -57,9 +63,9 @@ p{
 }
 
 
-.project{
+.project-info{
     text-align: center;
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 700;
     font-stretch: normal;
     margin:2%;
@@ -90,21 +96,43 @@ p{
 
 .orange-highlight{
     color:salmon;
+    text-align: center;
 
 }
 
  
-.font{
-    
-}
+
 }
 #center{
     text-align: center;
+    margin-left: 50%;
 }
 .tex{
     padding:10px;
 }
-  
+.line-gap{
+    
+    width:30%;
+    text-align: justify;
+}
+
+  .font-size{
+      font-size:12px;
+      color:dimgray;
+  }
+  .highlight1{
+      color:#61579c;
+      font-size: 60px;
+
+  }
+  .highlight2{
+    color:#61579c;
+    font-size: 30px;
+
+}
+.bold{
+    font-weight: 700;
+}
  
   
 
