--- a/style.css
+++ b/style.css
@@ -45,13 +45,15 @@ section{
 
 }
 .add-button{
-    text-decoration: none;
-    background-image: linear-gradient(45deg,lightSalmon,tomato);
-    padding:10px 40px;
+    background-image: linear-gradient(45deg,lightsalmon,tomato);
+    border: none;
+    color: white;
+    padding: 10px 40px;
+    cursor: pointer;
+    font-size: 15px;
     border-radius: 5px;
-    color:white;
     font-weight: 700;
-    margin-top: 40px;
+    text-decoration: none;
     
 }
 
@@ -71,12 +73,7 @@ p{
     margin:2%;
 }
 
-.container {
-    position: relative;
-    text-align: center;
-    color: white;
-  }
-  
+
   
   
   
@@ -133,9 +130,68 @@ p{
 .bold{
     font-weight: 700;
 }
- 
+.move{
+    text-align: center;
+}
+.container {
+    position: relative;
+    width: 50%;
+    padding-left: 25%;
+  }
+  .container img {
+    width: 100%;
+    height: auto;
+  }
+  .container .btn {
+    position: absolute;
+    top: 50%;
+    left: 87%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: #555;
+    color: white;
+    background-image: linear-gradient(45deg,lightsalmon,tomato);
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  
   
 
+  .container {
+    position: relative;
+    text-align: center;
+    color: white;
+  }
+  .centered {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 35px;
+    color:white;
+  }
+  
+  
+  /* Style buttons */
+.btn {
+    background-image: linear-gradient(45deg,lightsalmon,tomato);
+    border: none;
+    color: white;
+    padding: 10px 40px;
+    cursor: pointer;
+    font-size: 14px;
+    border-radius: 5px;
+    font-weight: 700;
+    text-decoration: none;
+    text-decoration-skip-ink: 5px;
+  }
+  
+  
+  
+  
   
   
   
